Fix #1171 - increase color contrast for light text on dark background.

--- a/oscm-portal/WebContent/marketplace/customBootstrap/scss/_darkVariables.scss
+++ b/oscm-portal/WebContent/marketplace/customBootstrap/scss/_darkVariables.scss
@@ -13,11 +13,13 @@ $dark-lightest: $gray-700;
 $footer-link-color: $white;
 
 $interior-color: $white;
+$light: $gray-200;
 
 $theme-colors: (
    "primary": $primary,
    "secondary": $secondary,
-   "dark": $dark
+   "dark": $dark,
+   "light": $light
 );
 
 // Cards
